lintian-brush (0.34) UNRELEASED; urgency=medium

  * Add support for renamed tag: rules-requires-root-implicitly -> rules-
    requires-root-missing.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 04 Oct 2019 01:11:07 +0000

lintian-brush (0.33) unstable; urgency=medium

  * Support multi-line git commands in README files.
  * Fix existing repository URLs in debian/upstream/metadata.
  * Add basic bash completion support. Closes: #939132
  * Set Rules-Requires-Root field.
  * Add basic zsh completion support.
  * Add fixer for older-source-format.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 04 Oct 2019 00:43:58 +0000

lintian-brush (0.32) unstable; urgency=medium

  * Add flag to disable interaction with external services.
  * Don't print error messages when unable to update non-machine-
    readable copyright files.
  * Support postgresql debian/control.in templates.
  * Add fixer for init.d-script-needs-depends-on-lsb-base.
  * Add fixer for unused-license-paragraph-in-dep5-copyright.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 30 Sep 2019 00:03:44 +0000

lintian-brush (0.31) unstable; urgency=medium

  * debian-rules-sets-dpkg-architecture-variable: actually drop variable
    when include is already present.
  * debian-changelog-has-wrong-day-of-week: Properly ignore unparseable
    dates.
  * Preserve ordering when replacing a debhelper dependency with a
    debhelper-compat one. Closes: #939077

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 29 Sep 2019 14:31:49 +0000

lintian-brush (0.30) unstable; urgency=medium

  * Show tree status when there are pending changes and --verbose is on.
  * Don't complain about generated files unless there is a change that
    can be made to a file.
  * Support updating generated GNOME control files.
  * Add basic support for optional debian/lintian-brush.conf
    configuration file in packages.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 29 Sep 2019 01:20:39 +0000

lintian-brush (0.29) unstable; urgency=medium
