@@ -2,6 +2,8 @@ lintian-brush (0.34) UNRELEASED; urgency=medium
 
   * Add support for renamed tag: rules-requires-root-implicitly -> rules-
     requires-root-missing.
+  * unused-license-paragraph-in-dep5-copyright: Ignore
+    NotMatchineReadableError.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 04 Oct 2019 01:11:07 +0000
 
